# drcov-rs

./: .gitignore  Cargo.toml  README.md
examples/: readme_example.rs
src/: lib.rs
testdata/: simple.drcov  v4_format.drcov
tests/: boundary_condition_tests.rs  builder_validation_tests.rs  edge_case_tests.rs  format_compatibility_tests.rs  integration_tests.rs  lookup_and_resolution_tests.rs  performance_tests.rs  serialization_consistency_tests.rs  test_with_real_files.rs
